--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'de.greenrobot:greendao:2.1.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
